Background volume export using django channels (preliminary)
[#91627188]

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1344,3 +1344,11 @@ h3.annotation-permissions {
 .permission label {
     font-weight: bold;
 }
+
+/* styles for volume export status/updates block */
+.status .updates {
+}
+
+.status .updates .time {
+    padding-right: 2em;
+}
