--- a/readux/books/templates/books/volume_export.html
+++ b/readux/books/templates/books/volume_export.html
@@ -7,6 +7,7 @@
 {% block javascript %}
   {{ block.super }}
    <script type="text/javascript" src="{% static 'ext/js.cookie.js' %}"></script>
+   <script type="text/javascript" src="{% static 'ext/moment.min.js' %}"></script>
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete -->
   <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.css" />
 
@@ -16,6 +17,12 @@
 <div class="container">
 
     {% include 'books/snippets/volume_header.html' %}
+
+    <div class="status" style="display:none">
+        <div class="alert alert-info">Your export has been requested.  Please leave
+        this page open to be notified when it is complete.</div>
+        <div class="updates"></div>
+    </div>
 
     {% if user.is_anonymous %}
       {# display a warning to users who are not logged in #}
@@ -31,31 +38,35 @@
       {{ warning }}</div>
     {% endif %}
 
-    {% if github_export %}
+    <div id="github-export" style="display:none">
+    {# github export success message; displayed & urls populated by javascript #}
       <div class="alert alert-success">GitHub jekyll site export succeeded.</div>
 
       <p>Your website export has been generated and saved to a new
-      GitHub repository at <a href="{{ repo_url }}">{{ repo_url }}</a>.
+      GitHub repository at <a class="repo-url"></a>.
       Your annotated web edition should now be accessible via GitHub Pages
-      at <a href="{{ ghpages_url }}">{{ ghpages_url }}</a>.</p>
+      at <a class="ghpages-url"></a>.</p>
 
       <p>For more information on using and customizing your site,
       see the
       <a href="https://help.github.com/categories/github-pages-basics/">Github
       Pages help documentation</a>.</p>
+    </div>
 
-    {% elif github_update %}
+    <div id="github-update" style="display:none">
+    {# github update success message; displayed & urls populated by javascript #}
       <div class="alert alert-success">GitHub jekyll site update succeeded.</div>
 
-      <p>A new <a href="{{ pullrequest_url }}">pull request</a> has been created
-      on your <a href="{{ repo_url }}">GitHub repository</a> with all the latest
+      <p>A new <a class="pullrequest-url">pull request</a> has been created
+      on your <a class="repo-url">GitHub repository</a> with all the latest
       changes.  You can review the changes and merge them into your
       published edition.</p>
+    </div>
 
-    {% else %}
-
-    {{ export_form.non_field_errors }}
-    <form class="volume-webexport form-horizontal" method="POST">{% csrf_token %}
+    <form class="volume-webexport form-horizontal">{% csrf_token %}
+      {{ export_form.non_field_errors }}
+      {# include volume pid as a hidden field so it is included in websocket form submission #}
+      <input type="hidden" name="pid" value="{{ vol.pid }}"/>
     {% for field in export_form %}
     {# TODO: github options should be disabled if user does not have a github account #}
     {# TODO: add visual indication for disabled fields #}
@@ -72,7 +83,7 @@
               {% endwith %}
             </div>
           {% endfor %}
-          <div class="text-warning">{{ field.errors }}</div>
+          <div class="text-warning mode-errors">{{ field.errors }}</div>
 
           {% elif field.name = 'annotations' and export_form.hide_annotation_choice %}
           {# hide annotation choice when flag is set (i.e., only one choice available) #}
@@ -82,20 +93,17 @@
             <label for="{{ field.name }}">{{ field.label }}</label>
             {{ field|add_class:"form-control" }}
             <div class="help-block">{{ field.help_text}}</div>
-            <div class="text-warning">{{ field.errors }}</div>
+            <div class="text-warning {{ field.name }}-errors">{{ field.errors }}</div>
             {# TODO: display validation errors, required/optional ? #}
         </div>
         {% endif %}
         {% endfor %}
 
         <div class="form-group">
-          <input type="hidden" name="completion-cookie" value="{{ vol.noid|add:'-web-export' }}"/>
           <button type="submit" class="volume-export btn btn-default">Export</button>
-          <span id="export-generating" class="hidden text-info">Generating... <i class="fa fa-cog fa-lg fa-spin"></i></span>
         </div>
-        </form>
+    </form>
 
-    {% endif %}
 
     <script>
     {# Show/hide subportions of the form based on export mode #}
@@ -120,6 +128,77 @@
             $("#id_update_repo").autocomplete({
                 source: data
             });
+        });
+
+      // Note that the path doesn't currently matter for routing; any WebSocket
+      // connection gets bumped over to WebSocket consumers
+      socket = new WebSocket("ws://" + window.location.host + "/notify/");
+      socket.onmessage = function(e) {
+          var message, data = {};
+          try {
+            // try to parse message data as json
+            data = JSON.parse(e.data);
+            message = data.message;
+          } catch (err) {
+            // if json parse errors, assume message is plain text
+            message = e.data;
+          }
+          if (data.type == 'error') {
+              // clear out status messages
+              // $('.status').empty();   // maybe better to hide/collapse progress?
+              // show the error
+              $('.status').append($('<div class="alert alert-warning">').text(message));
+              // redisplay the form, in case user wants to resubmit
+              $('.volume-webexport').show();
+          } else {
+              // todo: maybe also display time, so it looks more like a log?
+              // needs CSS, and maybe made collapsible (bootstrap collapse?)
+              var now = new moment(), p = $('<p>');
+              p.append($('<span class="time text-muted">')
+                .text(now.format("HH:mm:ss")));
+              p.append($('<span>').text(message));
+              $('.status .updates').append(p);
+          }
+          // *** special cases ***
+
+          // form was invalid, redisplay form with errors
+          if (data.form_errors) {
+            for (var field in data.form_errors) {
+              // update existing field error field with text from validation
+              $('.' + field + '-errors').text(data.form_errors[field]);
+            }
+          } else if (data.github_export) {
+            // github export completed
+            var div = $('#github-export');
+            // set repo url and github pages links
+            div.find('.repo-url').attr('href', data.repo_url).text(data.repo_url);
+            div.find('.ghpages-url').attr('href', data.ghpages_url).text(data.ghpages_url)
+            div.show()
+          } else if (data.github_update) {
+            // github update completed
+            var div = $('#github-update');
+            // set repo url and pull request links
+            div.find('.repo-url').attr('href', data.repo_url);
+            div.find('.pullrequest-url').attr('href', data.pullrequest_url);
+            div.show()
+          }
+      }
+
+        $('.volume-webexport').submit(function(event) {
+          console.log(this)
+          var $this = $(this);
+          console.log(event);
+          // submit form data as json over the websocket
+          socket.send(JSON.stringify({
+              volume_export: $this.serialize()
+          }));
+          // hide the form
+          $this.hide();
+          // don't submit via normal means
+          event.preventDefault();
+          // clear then show the status box
+          // $('.status').empty();
+          $('.status').show()
         });
 
       });
