experiment with scrollable style for the export status updates

--- a/readux/books/templates/books/volume_export.html
+++ b/readux/books/templates/books/volume_export.html
@@ -10,7 +10,7 @@
    <script type="text/javascript" src="{% static 'ext/moment.min.js' %}"></script>
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete -->
   <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.css" />
-
+  <link rel="stylesheet" type="text/css" href="{% static 'css/volume_export.css' %}" />
 {% endblock %}
 
 {% block content %}
