--- a/readux/books/static/css/volume_export.css
+++ b/readux/books/static/css/volume_export.css
@@ -7,17 +7,42 @@
 
 /* alternating row background colors in the export status updates */
 .updates > p:nth-child(even) {
-  background-color: #eeeeee;
+  background-color: #fcf8e3;
+}
+
+/* panel p font color */
+.updates > p {
+  color: #8a6d3b;
 }
 
 /* scrollable export status block */
-.updates {
+#status-updates {
   height: 200px;
   overflow-x: auto;
   overflow-y: scroll;
+  padding: 15px;
+  border-color: #faebcc;
+  border-top-color: #faebcc;
 }
 
 /* spacing after the export status block */
 .status {
   margin-bottom: 15px;
+}
+
+/* panel border color */
+#export-status-panel {
+  border-color: #faebcc;
+}
+
+/* panel heading colors */
+#export-status-heading {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  padding: 15px;
+}
+
+/* panel heading title font size */
+.panel-title {
+  font-size: 14px;
 }
