--- a/readux/pages/templates/pages/base.html
+++ b/readux/pages/templates/pages/base.html
@@ -19,7 +19,17 @@
       {% endif %}
 </div>
 
-<h1>{{ feincms_page.title }}</h1>
+<header class="page-header">
+  <h1>{{ feincms_page.title }}</h1>
+  <p class="lead">
+     {% block lead %}
+      {% feincms_render_region feincms_page "lead" request %}
+     {% endblock %}
+  </p>
+ </div>
+
+</header>
+
  <div id="content">
      {% block page-content %}
      {% feincms_render_region feincms_page "main" request %}
