Tweak page base template to include twitter/og metadata title
For site index, uses first lead content in plain text as the description
or subtitle for the site.

[#126694979]

--- a/readux/pages/templates/pages/base.html
+++ b/readux/pages/templates/pages/base.html
@@ -8,6 +8,17 @@
   {{ feincms_page.content.media }} {# include any needed css/js media content #}
 {% endblock %}
 
+{% block metadata %}
+  {{block.super}}
+  <meta property="og:title" content="{{ feincms_page.title }}"/>
+  <meta name="twitter:title" content="{{ feincms_page.title }}">
+  {% if tagline %}
+  <meta itemprop="og:headline" content="{{ tagline|striptags }}" />
+  <meta name="twitter:description" content="{{ tagline|striptags }}" />
+  {% endif %}
+{% endblock %}
+
+
 {% block content %}
 <div class="container" style="margin-top:20px">
 
