--- a/readux/books/templates/books/volume_export.html
+++ b/readux/books/templates/books/volume_export.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete -->
   <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.css" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/volume_export.css' %}" />
+
 {% endblock %}
 
 {% block content %}
@@ -95,25 +96,27 @@
       for 24 hours.</p>
     </div>
 
-    <form class="volume-webexport form-horizontal">{% csrf_token %}
+    <form class="volume-webexport" >{% csrf_token %}
       <div class="text-danger form-errors">
         {{ export_form.non_field_errors }}
       </div>
       {# include volume pid as a hidden field so it is included in websocket form submission #}
       <input type="hidden" name="pid" value="{{ vol.pid }}"/>
+
+
     {% for field in export_form %}
     {# TODO: github options should be disabled if user does not have a github account #}
     {# TODO: add visual indication for disabled fields #}
-          {% if field.name = 'mode' %}
+        {% if field.name = 'mode' %}
           {# special handling for export mode radio buttons and help text #}
-          <div class="help-block">{{ field.help_text}}</div>
+          <div class="export-title">export mode</div>
           {% for radio in field %}
             <div class="radio">
               <label for="{{ radio.id_for_label }}">
                   {{ radio.tag }} {{ radio.choice_label}}
               </label>
               {% with forloop.counter|cut:' ' as index %}
-                <div class="help-block">{{ export_form.mode_help|slice:index|last }}</div>
+                <div class="help-block indented-help-block">{{ export_form.mode_help|slice:index|last }}</div>
               {% endwith %}
             </div>
           {% endfor %}
@@ -124,46 +127,77 @@
             {{ field|add_class:"hidden" }}
 
         {% elif field.field.is_checkbox %}
-        {# bootstrap styles for checkbox input #}
-        <div class="checkbox {% if field.name in export_form.jekyll_options %}jekyll-only{% endif %}">
-          <label>
-            {{ field }} {{ field.label }}
-          </label>
-          <div class="help-block">{{ field.help_text}}</div>
-        </div>
-        {% else %}
-        <div class="form-group{% if field.errors %} has-error{% endif %} {% if field.name in export_form.jekyll_options %}jekyll-only{% endif %}"{% if field.name = 'github_repo' or field.name = 'update_repo' %}style="display:none"{% endif %}>
-            <label for="{{ field.name }}">{{ field.label }}</label>
-            {{ field|add_class:"form-control" }}
+          {# bootstrap styles for checkbox input #}
+          <div style="display:none" class="checkbox {% if field.name in export_form.jekyll_options %}jekyll-only{% endif %}">
+            <label>
+              {{ field }} {{ field.label }}
+            </label>
             <div class="help-block">{{ field.help_text}}</div>
-            <div class="text-warning {{ field.name }}-errors">{{ field.errors }}</div>
-            {# TODO: display validation errors, required/optional ? #}
-        </div>
+          </div>
+        {% else %}
+          <div style="display:none" class="form-group export-form-group{% if field.errors %} has-error{% endif %} {% if field.name in export_form.jekyll_options %}jekyll-only{% endif %}"{% if field.name = 'github_repo' or field.name = 'update_repo' %}style="display:none"{% endif %}>
+              <label for="{{ field.name }}">{{ field.label }}</label>
+              {{ field|add_class:"form-control" }}
+              <div class="help-block">{{ field.help_text}}</div>
+              <div class="text-warning {{ field.name }}-errors">{{ field.errors }}</div>
+              {# TODO: display validation errors, required/optional ? #}
+          </div>
         {% endif %}
-        {% endfor %}
+    {% endfor %}
 
-        <div class="form-group">
-          <button type="submit" class="volume-export btn btn-default">Export</button>
+        <div class="form-group export-form-group" >
+          <button disabled type="submit" class="btn btn-primary center-block export-btn" id="export-button"><i class="fa fa-download" aria-hidden="true"></i> Export</button>
         </div>
     </form>
-
 
     <script>
     {# Show/hide subportions of the form based on export mode #}
       $(document).ready(function(){
-        var transition = 500;
+        var transition = 300;
         var github_repo = $("div.form-group:has(#id_github_repo)");
         var update_repo = $("div.form-group:has(#id_update_repo)");
+        var deep_zoom = $("div.form-group:has(#id_deep_zoom)");
+        var deep_zoom_select = $("#id_deep_zoom")[0];
+        var image_hosting = $("div.form-group:has(#id_image_hosting)");
         // some form options are relevant to jekyll but not TEI export
         var jekyll_only = $('.jekyll-only');
+
+        // a function to toggle the usability of the deep_zoom image hosting
+        // when image is hosted independently, the deep_zoom image hosting becomes an option
+        // otherwise it is not an option
+        var toggle_deep_zoom = function(target) {
+          if (target.value == "independently_hosted") {
+            $("#id_deep_zoom")[0].disabled = false;
+            $("div.form-group:has(#id_deep_zoom)").fadeTo( "fast" , 1);
+          } else {
+            $("div.form-group:has(#id_deep_zoom)").fadeTo( "fast" , 0.5);
+            $("#id_deep_zoom")[0].value = "exclude";
+            $("#id_deep_zoom")[0].disabled = true;
+          }
+        };
+
+        // add eventlistener to the image hosting select
+        $("#id_image_hosting")[0].addEventListener("change",function(e) {
+          toggle_deep_zoom(e.target);
+        });
+
         $("input[type=radio][name=mode]").change(function() {
           // hide everything by default, then show as appropriate by mode
           github_repo.hide(transition);
           update_repo.hide(transition);
-          jekyll_only.show(transition);
+          jekyll_only.hide(transition);
+
+          // toggle UI usabilities
+          toggle_deep_zoom(deep_zoom_select[0]);
+          $("#export-button")[0].disabled = false;
+
           if (this.value == 'github') {
+            jekyll_only.show(transition);
             github_repo.show(transition);
+          } else if (this.value == 'download') {
+            jekyll_only.show(transition);
           } else if (this.value == 'github_update') {
+            jekyll_only.show(transition);
             update_repo.show(transition);
           } else if (this.value == 'tei') {
             // jekyll options not applicable for tei export
@@ -287,6 +321,27 @@
       });
     </script>
 
+
+    <style>
+      .export-title {
+        text-transform: capitalize;
+        font-size: 14px;
+        font-weight: bold;
+      }
+      .indented-help-block {
+        margin-left: 20px;
+        margin-top: 0;
+        margin-bottom: 20px;
+      }
+      .export-btn {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      .export-form-group {
+        margin-left: 0;
+        margin-right: 0;
+      }
+    </style>
   {% endif %}  {# logged in user #}
 
     </div>
