--- a/readux/books/static/css/volume_export.css
+++ b/readux/books/static/css/volume_export.css
@@ -46,3 +46,25 @@
 .panel-title {
   font-size: 14px;
 }
+
+.display-none {
+  display: none;
+}
+.export-title {
+  text-transform: capitalize;
+  font-size: 14px;
+  font-weight: bold;
+}
+.indented-help-block {
+  margin-left: 20px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.export-btn {
+  font-size: 20px;
+  font-weight: bold;
+}
+.export-form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
