fine tune export form UI

--- a/readux/books/templates/books/volume_export.html
+++ b/readux/books/templates/books/volume_export.html
@@ -201,7 +201,7 @@
             update_repo.show(transition);
           } else if (this.value == 'tei') {
             // jekyll options not applicable for tei export
-            jekyll_only.hide(transition);
+            jekyll_only.css("display", "none");
           }
         });
 
