add normalize css

--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -18,6 +18,11 @@
     <h5>
         <a target="_blank" rel="noopener" href="http://neekware.com">Neekware Inc.</a>
     </h5>
+
+    <h5>
+        <a href="{% url 'admin:index' %}">{% trans 'ADMIN_PAGE' %}</a>
+    </h5>
+
 </div>
 {% endblock content_body %}
 
