--- a/apps/templates/pages/about.html
+++ b/apps/templates/pages/about.html
@@ -1,18 +1,6 @@
 {% extends "base.html" %}
-{% block content %}
-<header class="page-header">
-    <h1>About</h1>
-    <p class="lead">
-       
-        
-       
-    </p>
-   </div>
-  
-  </header>
-  
-   <div id="content">
-       
+{% block content %}       
+<h1 class='uk-heading-primary'>About</h1>
        <p><span style="font-weight: 400;">Readux, an open source software platform developed at Emory University, offers a web-based space to engage with digitized print materials.</span></p>
   <p><span style="font-weight: 400;">The software provides a user-friendly way to publish critical editions as a stand-alone website and to develop interactive classroom projects. Think of it as a digital reading room where you can browse, search, and take notes in rare materials, then click a button to create a website with your personalized edition for personal and professional scholarly use.</span></p>
   <p><span style="font-weight: 400;">Please </span><a href="mailto:ecds@emory.edu"><span style="font-weight: 400;">contact</span></a><span style="font-weight: 400;"> the </span><a href="http://digitalscholarship.emory.edu/"><span style="font-weight: 400;">Emory Center for Digital Scholarship</span></a><span style="font-weight: 400;"> (ECDS) to learn more.</span></p>
@@ -72,6 +60,5 @@
       <h3 class="caption"></h3>
       
       
-  </div>
   </div>
 {% endblock content %}
