--- a/apps/templates/account/base.html
+++ b/apps/templates/account/base.html
@@ -1,10 +1,6 @@
-{% extends "base.html" %}
+{% extends "container.html" %}
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 offset-md-3">
     {% block inner %}{% endblock %}
-  </div>
-</div>
 {% endblock %}
